fixed layout problems

--- a/snake.css
+++ b/snake.css
@@ -2,16 +2,16 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     height: 100vh;
     margin: 0;
 }
 
-body, 
 .snake{
     background-color: #414141;
 }
 
-.game-board {
+#game-board {
     border-radius: 100px;
     display: grid;
     grid-template-columns: repeat(20,20px);
@@ -20,35 +20,61 @@ body,
 }
 
 .game-border-1 {
+    border: solid 10px;
     border-radius: 30px;
-    border: solid 2px;
+    box-shadow: inset 0 0 0 10px;
 }
 
 .game-border-2 {
-    border-color: #b66363;
+    border: #56bd55 solid 8px;
     border-radius: 26px;
-    border: solid 5px;
+    box-shadow: inset 0 0 0 10px #56bd55;
 }
 
 .game-border-3 {
-    border-color: #56bd55;
+    border: #4d7731 solid 30px;
     border-radius: 20px;
-    border: solid 5px;
-    box-shadow: inset 0 0 0 10px #5ddb5b;
+    box-shadow: inset 0 0 0 5px #4d7731;
 }
 
 #instructions{
     position: absolute;
-    top: 60%;
     color: white;
     width: 300px;
     text-align: center;
+    text-transform: capitalize;
     margin: 0;
 }
 
 .scores{
     display: flex;
     justify-content: space-between;
+}
+
+#score,
+#highScore{
     font-size: 40px;
-    font-weight: bold;
+    font-weight: bolder;  
+    color: #416b41;
+}
+
+#highScore{
+    display: none;
+}
+
+.snake{
+    border: #5a5a5a 1px dotted;
+}
+
+.food{
+    background-color: #dedede;
+    border: #999 5px solid;
+}
+
+#logo {
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    margin-top: 82px;
+    z-index: -1;
 }
